# TEA-Sim-TrustEvidence

./: .dockerignore  .env.example  .gitattributes  .gitignore  .zenodo.json  ARTEFACT_EVALUATION.md  CHANGELOG.md  CITATION.cff  CMPB_SCOPE_NOTE.md  DATA_ACCESS.md  FIGURE_GENERATION.md  FIGURE_LAYOUT_QA.csv  FILE_MANIFEST.tsv  INTEGRITY_SYNC_TRIGGER.txt  LICENSE  MEASUREMENT_PROTOCOL.md  Makefile  OUTPUT_MANIFEST.md  QUICKSTART.md  README.md  RELEASE_METADATA.json  RELEASE_NOTES_v2.1.0.md  RELEASE_NOTES_v2.2.0-rc.1.md  RELEASE_NOTES_v2.2.0.md  REPRODUCIBILITY.md  REVIEWER_REPRODUCTION.md  REVIEWER_SCOPE_NOTE.md  SHA256SUMS.txt  SPEC.md  THREAT_MODEL.md  docker-compose.full.yml  pyproject.toml  requirements-core.txt  requirements-external.txt  requirements-figures.txt  requirements-test.txt
backends/: README.md
bounded_model/: README.md  bounded_model_check.py
cmpb_method/: BIOMEDICAL_RELEVANCE_NOTE.md  CLAIM_BOUNDARY.md  COMPETENCY_QUESTIONS.md  ETHICS_AND_DATA_GOVERNANCE.md  README.md  SCHEMA_FIRST_CURATION_METHOD.md  competency_question_register.csv
data_sources/: DATA_ACCESS.md  DATA_LICENCE_AND_ACCESS_REPORT.md  DATA_SOURCE_REGISTER.csv  SOURCE_AND_DESCRIPTOR_AUDIT.md
decision/: LJI2_SENSITIVITY_PLAN.md  LJI_1_RETIREMENT_BRIDGE.md  LJI_2_0.md
docker/: Dockerfile.harness
docs/: DEPLOYABILITY_AND_COMPONENTS.md  DOI_AND_METADATA_RECONCILIATION.md  DOI_AND_VERSIONING.md  EXTERNAL_SERVICES.md  IG_VALIDATION.md  LICENSE_DOCS_CC_BY_4_0.md  MIGRATION_v2.0.1_TO_v2.1.0.md  MIGRATION_v2.1.0_TO_v2.2.0.md  (+7 more)
evaluation_workstreams/02_real_backends/: BACKEND_EXECUTION_REPORT.md  HARDWARE_PROFILE.txt  LIMITATIONS.md  QUICKSTART.md  README.md  pyproject.toml
evaluation_workstreams/02_real_backends/benchmark_outputs/: backend_benchmark_summary.csv  tamper_detection_results.csv
evaluation_workstreams/02_real_backends/benchmark_outputs/probes/: a3_probe.json  postgres_probe.json
evaluation_workstreams/02_real_backends/benchmark_outputs/raw_runs/: A2_MERKLE_n10000_rep1.json  A2_MERKLE_n10000_rep10.json  A2_MERKLE_n10000_rep2.json  A2_MERKLE_n10000_rep3.json  A2_MERKLE_n10000_rep4.json  A2_MERKLE_n10000_rep5.json  A2_MERKLE_n10000_rep6.json  A2_MERKLE_n10000_rep7.json  A2_MERKLE_n10000_rep8.json  A2_MERKLE_n10000_rep9.json  A2_MERKLE_n1000_rep1.json  A2_MERKLE_n1000_rep10.json  A2_MERKLE_n1000_rep2.json  A2_MERKLE_n1000_rep3.json  A2_MERKLE_n1000_rep4.json  A2_MERKLE_n1000_rep5.json  A2_MERKLE_n1000_rep6.json  A2_MERKLE_n1000_rep7.json  A2_MERKLE_n1000_rep8.json  A2_MERKLE_n1000_rep9.json  raw_run_index.json
evaluation_workstreams/02_real_backends/docs/: A1_POSTGRES_UNAVAILABLE.md  A3_ATTEMPT_LOG.md  BACKEND_CLAIM_BOUNDARY.md  BENCHMARK_METHOD.md
evaluation_workstreams/02_real_backends/experiments/: run_backend_benchmark.py  tamper_tests.py
evaluation_workstreams/02_real_backends/merkle/: merkle_log.py
evaluation_workstreams/02_real_backends/postgres/: postgres_schema.sql
evaluation_workstreams/02_real_backends/scripts/: probe_a3.py  probe_postgres.py  verify_sha256sums.py
evaluation_workstreams/02_real_backends/src/te_backend_upgrade/: __init__.py  canonical.py  postgres_backend.py  rekor_adapter.py
evaluation_workstreams/02_real_backends/tests/: test_merkle_log.py
evaluation_workstreams/03_workload_calibration/: CALIBRATION_CLAIM_BOUNDARY.md  CALIBRATION_REPORT.md  DATA_LICENCE_AND_ACCESS_REPORT.md  OUTPUT_MANIFEST.md  README.md  pyproject.toml
evaluation_workstreams/03_workload_calibration/benchmark_outputs/raw_runs/: calibrated_a2_raw_runs.csv
evaluation_workstreams/03_workload_calibration/benchmark_outputs/raw_runs/json/: C1_ROUTINE_SYNTHETIC_AMBULATORY_a2_raw.json  C2_WEARABLE_CGM_MONITORING_a2_raw.json  C3_FHIR_HETEROGENEITY_DEMO_a2_raw.json  C4_CROSS_ORGANISATIONAL_DISPUTE_a2_raw.json
evaluation_workstreams/03_workload_calibration/calibrated_scenarios/: PARAMETER_REGISTER_CALIBRATED.csv  bigideas_stats.csv  calibrated_scenarios.csv  mimic_fhir_stats.csv  synthea_stats.csv
evaluation_workstreams/03_workload_calibration/docs/: DATA_SOURCE_VERIFICATION.md
evaluation_workstreams/03_workload_calibration/metadata/: VERIFIED_PUBLIC_SOURCE_PARAMETERS.csv
evaluation_workstreams/03_workload_calibration/sample_data/bigideas/001/: Dexcom.csv
evaluation_workstreams/03_workload_calibration/sample_data/synthea_fhir/: sample_bundle.json
evaluation_workstreams/03_workload_calibration/scripts/: build_calibrated_scenarios.py  download_or_fetch_synthea.sh  download_physionet_manifests.sh  extract_bigideas_stats.py  extract_mimic_fhir_stats.py  extract_synthea_stats.py  generate_synthea.sh  run_calibrated_a2.py  verify_sha256sums.py
evaluation_workstreams/03_workload_calibration/smoke_outputs/: bigideas_stats_sample.csv  mimic_fhir_stats_sample.csv  synthea_stats_sample.csv
evaluation_workstreams/03_workload_calibration/src/te_backend_upgrade/: canonical.py  merkle_log.py  postgres_backend.py  rekor_adapter.py
evaluation_workstreams/03_workload_calibration/src/te_backend_upgrade/backends/: postgres_schema.sql
ig/: README.md  (+5 more)
(+654 files in other folders)
