[build-system]
requires = ["setuptools==82.0.1", "wheel==0.46.3"]
build-backend = "setuptools.build_meta"

[project]
name = "teasim-trustevidence"
version = "2.2.0rc1"
description = "Portable audit evidence for health information exchange"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "Apache-2.0"
authors = [{name = "Antonio Clim", email = "antonio.clim@csie.ase.ro"}]
keywords = [
  "health information exchange",
  "audit evidence",
  "FHIR",
  "Merkle receipts",
  "reproducibility",
]
dependencies = [
  "jsonschema==4.26.0",
  "cryptography==49.0.0",
  "rfc8785==0.1.4",
]

[project.optional-dependencies]
test = [
  "pytest==9.1.1",
  "hypothesis==6.156.6",
]
figures = [
  "matplotlib==3.10.8",
  "Pillow==12.2.0",
  "pypdf==5.9.0",
]

[project.scripts]
teasim = "trustevidence.cli:main"

[project.urls]
Repository = "https://github.com/antonioclim/TEA-Sim-TrustEvidence"
"Release candidate review" = "https://github.com/antonioclim/TEA-Sim-TrustEvidence/pull/1"
"Previous exact release" = "https://doi.org/10.5281/zenodo.21318387"
"Previous source release" = "https://github.com/antonioclim/TEA-Sim-TrustEvidence/releases/tag/v2.1.0"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
trustevidence = ["schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests", "property_tests"]
addopts = "-q -p no:cacheprovider"
