[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "trustevidence-backend-upgrade"
version = "0.3.0"
description = "backend-evaluation workstream local reference backend execution kit for TrustEvidence auditability experiments"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
